12 Hour Format with Toggle Switch

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
         <div class="date" id="date">Loading...</div>
     </div>
 
+    <div class="toggle-container">
+        <label class="toggle-label">
+            <input type="checkbox" id="formatToggle">
+            <span class="toggle-slider"></span>
+        </label>
+        <span class="toggle-text">12-Hour</span>
+    </div>
+
     <script src="sr.js">
     </script>
 </body>
